// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorInput Snapshots renders a dark checkIcon if hex value is light 1`] = `
.emotion-8 {
  position: relative;
}

.emotion-2 {
  display: inline-block;
  position: relative;
}

.emotion-1 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  box-sizing: border-box;
  padding-left: 46px;
  min-width: 116px;
  width: 116px;
  background-color: px;
}

.emotion-1::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-1::-moz-placeholder {
  color: #5e6a75;
}

.emotion-1:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-1::placeholder {
  color: #5e6a75;
}

.emotion-1:hover {
  border-color: #333d47;
}

.emotion-1:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-1:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-1:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::placeholder {
  color: #a1aab3;
}

.emotion-1:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-1:focus::-moz-placeholder {
  color: transparent;
}

.emotion-1:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-1:focus::placeholder {
  color: transparent;
}

.emotion-3 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  margin-top: 10px;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-6 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-5 {
  display: inline-block;
  position: absolute;
  left: 6px;
  top: 8px;
}

.emotion-5 svg {
  display: block;
}

.emotion-5 .wd-icon-fill {
  fill: #000000;
}

.emotion-5:hover .wd-icon-fill {
  fill: #000000;
}

.emotion-5 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-5:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-5 .wd-icon-background {
  fill: transparent;
}

.emotion-5:hover .wd-icon-background {
  fill: transparent;
}

<div
  className="emotion-8 emotion-9"
>
  <div
    className="emotion-2"
  >
    <input
      className="emotion-0 emotion-1"
      maxLength={7}
      onChange={[Function]}
      placeholder="FFFFFF"
      spellCheck={false}
      type="text"
      value="ffffff"
    />
  </div>
  <div
    className="emotion-3 emotion-4"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <span
    className="emotion-5"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.314 6.828l1.06 1.061a.5.5 0 0 1 0 .707l-7.778 7.778a.5.5 0 0 1-.707 0L6.354 12.84a.5.5 0 0 1 0-.707l1.06-1.06a.5.5 0 0 1 .707 0l2.122 2.12 6.364-6.364a.5.5 0 0 1 .707 0z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
  />
  <span
    className="emotion-6 emotion-7"
  >
    #
  </span>
</div>
`;

exports[`ColorInput Snapshots renders a disabled input 1`] = `
.emotion-7 {
  position: relative;
}

.emotion-2 {
  display: inline-block;
  position: relative;
}

.emotion-3 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  margin-top: 10px;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-1 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  box-sizing: border-box;
  padding-left: 46px;
  min-width: 116px;
  width: 116px;
  background-color: #f0f1f2;
}

.emotion-1::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-1::-moz-placeholder {
  color: #5e6a75;
}

.emotion-1:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-1::placeholder {
  color: #5e6a75;
}

.emotion-1:hover {
  border-color: #333d47;
}

.emotion-1:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-1:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-1:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::placeholder {
  color: #a1aab3;
}

.emotion-1:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-1:focus::-moz-placeholder {
  color: transparent;
}

.emotion-1:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-1:focus::placeholder {
  color: transparent;
}

.emotion-5 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  color: #a1aab3;
}

<div
  className="emotion-7 emotion-8"
>
  <div
    className="emotion-2"
  >
    <input
      className="emotion-0 emotion-1"
      disabled={true}
      maxLength={7}
      onChange={[Function]}
      placeholder="FFFFFF"
      spellCheck={false}
      type="text"
      value="ffffff"
    />
  </div>
  <div
    className="emotion-3 emotion-4"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <span
    className="emotion-5 emotion-6"
    disabled={true}
  >
    #
  </span>
</div>
`;

exports[`ColorInput Snapshots renders a light checkIcon if hex value is dark 1`] = `
.emotion-8 {
  position: relative;
}

.emotion-2 {
  display: inline-block;
  position: relative;
}

.emotion-1 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  box-sizing: border-box;
  padding-left: 46px;
  min-width: 116px;
  width: 116px;
  background-color: px;
}

.emotion-1::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-1::-moz-placeholder {
  color: #5e6a75;
}

.emotion-1:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-1::placeholder {
  color: #5e6a75;
}

.emotion-1:hover {
  border-color: #333d47;
}

.emotion-1:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-1:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-1:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::placeholder {
  color: #a1aab3;
}

.emotion-1:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-1:focus::-moz-placeholder {
  color: transparent;
}

.emotion-1:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-1:focus::placeholder {
  color: transparent;
}

.emotion-3 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  margin-top: 10px;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-6 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-5 {
  display: inline-block;
  position: absolute;
  left: 6px;
  top: 8px;
}

.emotion-5 svg {
  display: block;
}

.emotion-5 .wd-icon-fill {
  fill: #ffffff;
}

.emotion-5:hover .wd-icon-fill {
  fill: #ffffff;
}

.emotion-5 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-5:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-5 .wd-icon-background {
  fill: transparent;
}

.emotion-5:hover .wd-icon-background {
  fill: transparent;
}

<div
  className="emotion-8 emotion-9"
>
  <div
    className="emotion-2"
  >
    <input
      className="emotion-0 emotion-1"
      maxLength={7}
      onChange={[Function]}
      placeholder="FFFFFF"
      spellCheck={false}
      type="text"
      value="e6e"
    />
  </div>
  <div
    className="emotion-3 emotion-4"
    style={
      Object {
        "backgroundColor": "#e6e",
      }
    }
  />
  <span
    className="emotion-5"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.314 6.828l1.06 1.061a.5.5 0 0 1 0 .707l-7.778 7.778a.5.5 0 0 1-.707 0L6.354 12.84a.5.5 0 0 1 0-.707l1.06-1.06a.5.5 0 0 1 .707 0l2.122 2.12 6.364-6.364a.5.5 0 0 1 .707 0z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
  />
  <span
    className="emotion-6 emotion-7"
  >
    #
  </span>
</div>
`;

exports[`ColorInput Snapshots renders as expected 1`] = `
.emotion-7 {
  position: relative;
}

.emotion-2 {
  display: inline-block;
  position: relative;
}

.emotion-1 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  box-sizing: border-box;
  padding-left: 46px;
  min-width: 116px;
  width: 116px;
  background-color: px;
}

.emotion-1::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-1::-moz-placeholder {
  color: #5e6a75;
}

.emotion-1:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-1::placeholder {
  color: #5e6a75;
}

.emotion-1:hover {
  border-color: #333d47;
}

.emotion-1:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-1:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-1:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::placeholder {
  color: #a1aab3;
}

.emotion-1:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-1:focus::-moz-placeholder {
  color: transparent;
}

.emotion-1:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-1:focus::placeholder {
  color: transparent;
}

.emotion-3 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  margin-top: 10px;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-5 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

<div
  className="emotion-7 emotion-8"
>
  <div
    className="emotion-2"
  >
    <input
      className="emotion-0 emotion-1"
      maxLength={7}
      onChange={[Function]}
      placeholder="FFFFFF"
      spellCheck={false}
      type="text"
      value=""
    />
  </div>
  <div
    className="emotion-3 emotion-4"
    style={
      Object {
        "backgroundColor": "",
      }
    }
  />
  <span
    className="emotion-5 emotion-6"
  >
    #
  </span>
</div>
`;

exports[`ColorInput Snapshots renders valid empty color input 1`] = `
.emotion-7 {
  position: relative;
}

.emotion-2 {
  display: inline-block;
  position: relative;
}

.emotion-1 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  box-sizing: border-box;
  padding-left: 46px;
  min-width: 116px;
  width: 116px;
  background-color: px;
}

.emotion-1::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-1::-moz-placeholder {
  color: #5e6a75;
}

.emotion-1:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-1::placeholder {
  color: #5e6a75;
}

.emotion-1:hover {
  border-color: #333d47;
}

.emotion-1:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-1:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-1:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::placeholder {
  color: #a1aab3;
}

.emotion-1:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-1:focus::-moz-placeholder {
  color: transparent;
}

.emotion-1:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-1:focus::placeholder {
  color: transparent;
}

.emotion-3 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  margin-top: 10px;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-5 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

<div
  className="emotion-7 emotion-8"
>
  <div
    className="emotion-2"
  >
    <input
      className="emotion-0 emotion-1"
      disabled={false}
      maxLength={7}
      onChange={[Function]}
      placeholder="FFFFFF"
      spellCheck={false}
      type="text"
      value=""
    />
  </div>
  <div
    className="emotion-3 emotion-4"
    style={
      Object {
        "backgroundColor": "",
      }
    }
  />
  <span
    className="emotion-5 emotion-6"
    disabled={false}
  >
    #
  </span>
</div>
`;

exports[`ColorInput Snapshots renders with a selected color 1`] = `
.emotion-7 {
  position: relative;
}

.emotion-2 {
  display: inline-block;
  position: relative;
}

.emotion-1 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  box-sizing: border-box;
  padding-left: 46px;
  min-width: 116px;
  width: 116px;
  background-color: px;
}

.emotion-1::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-1::-moz-placeholder {
  color: #5e6a75;
}

.emotion-1:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-1::placeholder {
  color: #5e6a75;
}

.emotion-1:hover {
  border-color: #333d47;
}

.emotion-1:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-1:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-1:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::placeholder {
  color: #a1aab3;
}

.emotion-1:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-1:focus::-moz-placeholder {
  color: transparent;
}

.emotion-1:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-1:focus::placeholder {
  color: transparent;
}

.emotion-3 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  margin-top: 10px;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-5 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

<div
  className="emotion-7 emotion-8"
>
  <div
    className="emotion-2"
  >
    <input
      className="emotion-0 emotion-1"
      maxLength={7}
      onChange={[Function]}
      placeholder="FFFFFF"
      spellCheck={false}
      type="text"
      value="e6e"
    />
  </div>
  <div
    className="emotion-3 emotion-4"
    style={
      Object {
        "backgroundColor": "#e6e",
      }
    }
  />
  <span
    className="emotion-5 emotion-6"
  >
    #
  </span>
</div>
`;

exports[`ColorInput Snapshots renders with a selected color without # 1`] = `
.emotion-7 {
  position: relative;
}

.emotion-2 {
  display: inline-block;
  position: relative;
}

.emotion-1 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  box-sizing: border-box;
  padding-left: 46px;
  min-width: 116px;
  width: 116px;
  background-color: px;
}

.emotion-1::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-1::-moz-placeholder {
  color: #5e6a75;
}

.emotion-1:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-1::placeholder {
  color: #5e6a75;
}

.emotion-1:hover {
  border-color: #333d47;
}

.emotion-1:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-1:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-1:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::placeholder {
  color: #a1aab3;
}

.emotion-1:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-1:focus::-moz-placeholder {
  color: transparent;
}

.emotion-1:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-1:focus::placeholder {
  color: transparent;
}

.emotion-3 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  margin-top: 10px;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-5 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

<div
  className="emotion-7 emotion-8"
>
  <div
    className="emotion-2"
  >
    <input
      className="emotion-0 emotion-1"
      maxLength={7}
      onChange={[Function]}
      placeholder="FFFFFF"
      spellCheck={false}
      type="text"
      value="e6e"
    />
  </div>
  <div
    className="emotion-3 emotion-4"
    style={
      Object {
        "backgroundColor": "#e6e",
      }
    }
  />
  <span
    className="emotion-5 emotion-6"
  >
    #
  </span>
</div>
`;
